src/main/resources/api/examples/errors/error-example-500.raml
#%RAML 1.0 NamedExample
values:
  message: Internal Server Error